--- a/react-18/package.json
+++ b/react-18/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
     "agora-rtc-sdk-ng": "^4.17.0",
+    "bootstrap": "^5.3.0",
     "cross-env": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
